--- a/server/cloudbuild.yaml
+++ b/server/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
         $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
       - '--builder=gcr.io/buildpacks/builder:v1'
       - '--network=cloudbuild'
-      - '--path=site'
+      - '--path=server'
     id: Buildpack
     entrypoint: pack
   - name: gcr.io/cloud-builders/docker
